# rust-picto

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: create.rs  iter.rs  read.rs  resize.rs
examples/: blur.rs  dither.rs  draw.rs  resize.rs  sharpen.rs
src/: area.rs  buffer.rs  error.rs  format.rs  lib.rs  orientation.rs  parameter.rs  pixel.rs  read.rs  region.rs  util.rs  view.rs  write.rs
src/buffer/: buffer.rs  cast.rs  default.rs  mod.rs  palette.rs
src/decoder/: bmp.rs  error.rs  gif.rs  jpeg.rs  mod.rs  png.rs  tga.rs  xyz.rs
src/encoder/: bmp.rs  gif.rs  mod.rs  png.rs  tga.rs
src/format/: color.rs  format.rs  mod.rs
src/iter/: coordinates.rs  mod.rs
src/iter/pixel/: immutable.rs  mod.rs  mutable.rs
src/processing/: blur.rs  dither.rs  flip.rs  mod.rs  prelude.rs  rotate.rs  sample.rs  scale.rs  sharpen.rs
src/processing/ditherer/: mod.rs  neuquant.rs  palette.rs
src/processing/sampler/: cubic.rs  gaussian.rs  lanczos.rs  linear.rs  mod.rs  nearest.rs
src/processing/scale/: linear.rs  mod.rs  nearest.rs
src/processing/scaler/: mod.rs  nearest.rs  sampler.rs
src/processing/scaler/xbr/: mod.rs  zuper.rs
src/processing/util/: clamping.rs  mod.rs
src/util/: clamped.rs  mod.rs
src/view/: immutable.rs  mod.rs  mutable.rs  read.rs  view.rs  write.rs
tests/: boat.xyz  jpeg.rs  lib.rs  png.rs  rainbow.tga
