[package]
name    = "picto"
version = "0.4.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description   = "Image handling library."
repository    = "https://github.com/meh/rust-picto"
documentation = "https://docs.rs/picto"
keywords      = ["image", "color"]

[dev-dependencies]
# Benchmarks and tests.
approx = "0.1"
image  = "0.10"

# Examples.
clap      = "2"
term_size = "0"

[dependencies]
byteorder = "0.5"
num       = "0.1"
palette   = "0.2"

[dependencies.imagefmt]
version  = "4"
optional = true

[dependencies.png]
version  = "0.5"
optional = true

[dependencies.jpeg-decoder]
version  = "0.1"
optional = true

[dependencies.gif]
version  = "0.9"
optional = true

[dependencies.xyz]
version  = "0.2"
optional = true

[features]
default = ["png", "jpeg", "bmp", "tga", "gif", "xyz"]
nightly = []

jpeg = ["jpeg-decoder"]
bmp  = ["imagefmt"]
tga  = ["imagefmt"]
